fix(admin): Show visual indicator of experiment and condition statuses
Resolves: #23

- fix(admin): Show visual indicator of experiment and condition statuses

Authored-by: Lily Fleeting-Craig <2622842c@student.gla.ac.uk>

--- a/admin.html
+++ b/admin.html
@@ -44,13 +44,13 @@
             <p class="hint">Select the password type for the participant. </p>
 
             <div class="actions">
-                <button id="clear" class="ghost" onclick="toggleExperimentStatus(false)">Experiment Off</button>
-                <button id="login" class="primary" onclick="toggleExperimentStatus(true)">Experiment On</button>
+                <button id="experiment-off" class="ghost" onclick="toggleExperimentStatus(false)">Experiment Off</button>
+                <button id="experiment-on" class="primary" onclick="toggleExperimentStatus(true)">Experiment On</button>
             </div>
 
             <div class="actions">
-                <button id="clear" class="ghost" onclick="saveExperimentCondition('emoji')">Emoji</button>
-                <button id="login" class="primary" onclick="saveExperimentCondition('digits')">Digits</button>
+                <button id="emoji-mode" class="ghost" onclick="saveExperimentCondition('emoji')">Emoji</button>
+                <button id="digits-mode" class="primary" onclick="saveExperimentCondition('digits')">Digits</button>
             </div>
         </section>
     </main>
