--- a/register.html
+++ b/register.html
@@ -60,7 +60,7 @@
     <img class="banner-image" src="./resources/register-banner.svg">
     <form id="register-form" class="card" autocomplete="off">
       <label>
-        Participant ID (optional)
+        Participant ID (Do not enter any identifiable information)
         <input id="participant-id" type="text" placeholder="e.g., P001" />
       </label>
 
@@ -70,7 +70,7 @@
         <label><input type="radio" name="password-type" value="emoji" /> Emoji</label>
       </fieldset>
 
-      <button type="submit" class="primary">Generate Password</button>
+      <button id="generate-btn" type="submit" class="primary" disabled>Generate Password</button>
     </form>
 
     <section id="confirm-passcode" class="card hidden">
