feat(digitpass): Make digitpass compatible
Resolves: #35, #36, #37, #38

- refactor(app): Make app functions load at appropriate times to solve flicker
- refactor(experiment-mode): Set default for experiment mode
- refactor(emoji-mode): Set default for emoji mode
- feat(digitpass): Add digitpass logo
- feat(digitpass): Setup alternative logo loading

Authored-by: Lily Fleeting-Craig <2622842c@student.gla.ac.uk>

--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login</title>
   <link rel="stylesheet" href="styles.css" />
+  <script src="app.js"></script>
 </head>
 
 <body>
@@ -53,6 +54,7 @@
         <p>Admin</p>
       </a>
     </div>
+    <script>updateHeader();</script>
   </header>
   <main class="container">
     <h1>Login</h1>
@@ -88,7 +90,7 @@
   <script src="firebase-config.js"></script>
   
   <!-- Main App -->
-  <script src="app.js"></script>
+  <script>updatePage();</script>
 </body>
 
 </html>
