--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Admin Portal</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="app.js"></script>
 </head>
 
 <body>
@@ -54,6 +55,7 @@
                 <p>Admin</p>
             </a>
         </div>
+        <script>updateHeader();</script>
     </header>
     <main class="container">
         <h1>Admin Portal</h1>
@@ -102,7 +104,7 @@
     <script src="firebase-config.js"></script>
     
     <!-- Main App -->
-    <script src="app.js"></script>
+    <script>updatePage();</script>
 </body>
 
 </html>
