--- a/register.html
+++ b/register.html
@@ -65,6 +65,10 @@
         Participant ID (Do not enter any identifiable information)
         <input id="participant-id" type="text" placeholder="e.g., P001" />
       </label>
+      <label>
+        Username
+        <input id="username" type="text" placeholder="Enter a username" />
+      </label>
 
       <fieldset>
         <legend>Password Type</legend>
