add new username

--- a/register.html
+++ b/register.html
@@ -62,12 +62,8 @@
     <img class="banner-image" src="./resources/register-banner.svg">
     <form id="register-form" class="card" autocomplete="off">
       <label>
-        Participant ID (Do not enter any identifiable information)
-        <input id="participant-id" type="text" placeholder="e.g., P001" />
-      </label>
-      <label>
         Username
-        <input id="username" type="text" placeholder="Enter a username" />
+        <input id="participant-id" type="text" placeholder="Enter a username" />
       </label>
 
       <fieldset>
