--- a/login.html
+++ b/login.html
@@ -61,6 +61,11 @@
     <p id="login-hint" class="hint">Use the password generated at registration.</p>
     <img class="small-image" src="./resources/login-banner.svg">
     <section id="login-panel" class="card">
+      <label>
+        Username
+        <input id="login-username" type="text" placeholder="Enter your username" />
+      </label>
+
       <div class="input-row">
         <div id="input-display" class="input-display" aria-live="polite">----</div>
         <div id="input-meta" class="hint">Length 0 / 4</div>
